2002-08-19  Mike Newman  <mike@gtnorthern.demon.co.uk>

	* cgi-bin/membership-form-handler.cgi:
	* membership-form.html: OK, it works. Remove the old form and handler.

2002-08-18  Vincent Untz  <vincent@vuntz.net>

	* membership-form.php: added the new form (it checks if fields
	are correctly filled).
	* electionrules.html
	* index.html
	* membership-policy.html
	* membership.html : changed the links to the form.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>

	* cgi-bin/membership-form-handler.cgi: Perl uses 'eq' not
	'=='.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>
	
	* membership-form.html: Add some spacing.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>

	* cgi-bin/membership-form-handler.cgi: Minor updates.

2002-08-06  Glynn Foster  <glynn.foster@sun.com>

	* cgi-bin/membership-form-handler.cgi: Add backend for new checkbox.
	* membership-form.html: Add a new checkbox for previous foundation
	member.

2002-07-17 Steve Fox <drfickle@uberh4x0r.org>

	* index.html
	* template.html

	Ack! Increase table width (I _hate_ fixed table widths)

2002-07-17 Steve Fox <drfickle@uberh4x0r.org>

	* index.html
	* template.html

	Add the Friends of GNOME program

2002-06-26 Steve Fox <drfickle@uberh4x0r.org>

	* press.html
	* press/pr-gnome20.html

	Add 2.0 announce

2002-06-25 Steve Fox <drfickle@uberh4x0r.org>

	* membership-list.html

	Wow! Fix my old email address

2002-06-25 Steve Fox <drfickle@uberh4x0r.org>

	* press/pr-accessible.html
	* press/pr-borlandjoins.html
	* press/pr-foundation.html
	* press/pr-gnome14.html
	* press/pr-mandrakesoftjoins.html
	* press/pr-newcommitments.html
	* press/pr-redflagjoins.html
	* press/pr-redhat.html
	* press/pr-sunjoins.html : Fix bad HTML
	* press/pr-gnomeenelsur.html : Add Latin American tour
	* press.html


2002-03-05  Glynn Foster  <glynn.foster@sun.com>

	* index.html: Remove Borland, Gnumatic, OMG, TurboLinux.
		      s/VA Linux/OSDN
	 logos/*: Removed old and added new.
