@@ -95,16 +95,11 @@
   <h3>Renewing your membership</h3>
 
   <p>
-   <b>Note: Complete renewal information will be made available before
-   the first memberships expire.</b>
-  </p>
-
-  <p>
    Membership in the GNOME Foundation ordinarily lasts for two years.
    A reasonable period of time before your membership expires, you will
    be contacted by the Membership Committee with a request that you file
-   a renewal application, available at [URL will be inserted here when
-   available].  Renewal applications will be reviewed according to the
+   a renewal application, available <a href="membership-form.php">here</a>.
+   Renewal applications will be reviewed according to the
    same standards outlined above for an initial membership, and must
    generally be supported by recent or ongoing contributions to GNOME.
    If you do not file a valid renewal application by the specified
